# slog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/base_example/: CMakeLists.txt  main.cpp
examples/class_example/: CMakeLists.txt  main.cpp
examples/format_example/: CMakeLists.txt  main.cpp
examples/multithread_example/: CMakeLists.txt  main.cpp
include/slog/: LogMessage.h  Logger.h  Manager.h  levels.h  sink.h  slog.h
src/: LogMessage.cpp  Logger.cpp  Manager.cpp  sink.cpp  slog.cpp
